# cypherock-cot

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  cmake_output.txt  output.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
client/: package.json
client/src/: client.ts  crypto_utils.ts  index.ts  ot_session.ts  proto_utils.ts
proto/: cot.proto
server/: CMakeLists.txt
server/proto/: cot.pb.c  cot.pb.h
server/src/: crypto_utils.cpp  crypto_utils.hpp  main.cpp  ot_session.cpp  ot_session.hpp  proto_utils.cpp  proto_utils.hpp  rand_win.c  server.cpp  server.hpp  trezor_stubs.c
